 Use memcpy instead of iterating on buf_read/write (#751)
 Add generator support for PlatformIO (#718)
 Add clean target to generator/proto/Makefile (#681)
 Windows .bats: use standard python invocation instead of py.exe launcher (#657)
 Fix problems running tests with newer SCons version
 Improve handling of varint overflows
 Improve optimization for little-endian platforms

NOTE: During development, prereleases were published on platform.io registry
as versions 0.4.6 - 0.4.6.3. The version 0.4.6.4 on platform.io corresponds
to the real final 0.4.6 release.


nanopb-0.4.5 (2021-03-22)
 Fix invalid free() with oneof (#647, GHSA-7mv5-5mxh-qg88)
 Fix unordered field numbers inside oneof causing fields to be ignored (#617)
 Fix pb_decode() not initializing fields inside oneof (#635
 Fix compiler errors with complex oneof hierarchy and sizeof() (#610)
 Fix descriptor width calculation for 64-bit types (#644)
 Fix compiler error in generated initializer for submessage callback (#631)
 Fix duplicate union definition in generated file (#637)
 Fix test case build error on SCons 4.1.0
 Pip package: include nanopb_pb2.py (#629)
 Make generator consider dependencies recursively (#610)
 Bazel build system updates (#633)
 Add support for including comments from .proto file (#85, #645)

nanopb-0.4.4 (2020-11-25)
 Fix memory leak with oneofs and PB_ENABLE_MALLOC (#615, GHSA-85rr-4rh9-hhwh)
 Fix generator error when oneof contains a single unresolved field size (#610)
 Fix unsigned enums not working correctly inside OneOf (#611)
 Fix recursion depth exceeded error in generator (#493)
 Add '--version' option to nanopb_generator.py (#607)
 Add support for proto3 optional fields introduced in protoc 3.12 (#591)
 Add better error message when enum type is not found (#592)
 Allow specifying descriptorsize on field level also (#546)
 Allow multiple targets to be created by calling NANOPB_GENERATE_CPP() (#596)
 Conanfile: Add protobuf-nanopb library to cpp_info.libs (#605)