@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nanopb"
-version = "0.4.6"
+version = "0.4.7-dev"
 description = "Nanopb is a small code-size Protocol Buffers implementation in ansi C. It is especially suitable for use in microcontrollers, but fits any memory restricted system."
 authors = ["Petteri Aimonen <jpa@npb.mail.kapsi.fi>"]
 license = "Zlib"
