@@ -34,10 +34,9 @@ nanopb-0.4.6 (2022-05-30)
  Improve handling of varint overflows
  Improve optimization for little-endian platforms
 
-NOTE: During development, prereleases were published on platform.io registry
-as versions 0.4.6 - 0.4.6.3. The version 0.4.6.4 on platform.io corresponds
+NOTE: During development, prereleases were published on PlatformIO registry
+as versions 0.4.6 - 0.4.6.3. The version 0.4.6.4 on PlatformIO corresponds
 to the real final 0.4.6 release.
-
 
 nanopb-0.4.5 (2021-03-22)
  Fix invalid free() with oneof (#647, GHSA-7mv5-5mxh-qg88)
@@ -189,6 +188,13 @@ nanopb-0.4.0 (2019-12-20)
  Implement conan recipe (#378)
  CMake: Split nanopb_out command (#454)
  CMake: install created shared library(dll) in windows to the binary folder (#447)
+
+nanopb-0.3.9.9 (2022-04-23)
+ Fix Xcode analyzer warnings (#667, #674)
+ Fix clang sanitizer warnings
+
+Note: there are no known functional differences between 0.3.9.8 and 0.3.9.9.
+The changes are merely to fix warnings introduced by new compiler versions.
 
 nanopb-0.3.9.8 (2021-03-22)
  Fix invalid free() with oneof (#647, GHSA-7mv5-5mxh-qg88)
